   of their arguments.

 - (EXPT 2 -2.0d0) is now computed in double precision.

 - When building programs with ASDF:MAKE-BUILD, "prebuilt-asdf" may be listed
   in the dependencies, as the last one, so that ASDF is linked in. It is
   required by some packages that do not distinguish between compilation and
   distribution.

 - ECL now captures SIGPIPE.

 - In DEFMACRO forms, the &WHOLE argument may now be declared
   ignorable. Formerly it was always referenced by the destructuring code of
   the macro.

 - ECL mistakenly allowed the rational denominator to carry a sign, as in 1/-2.

 - When used with -debug and the command line options cause some error ECL
   oferts an ABORT and a CONTINUE restarts.

 - Loading binary files is no longer locking and can be done from several
   threads simultaneously. Note, however, that this may have unexpected
   consequences regarding things like creation of packages or class and
   function definition.

 - ECL will use long double whenever the type is avalailable AND the special
   functions cosl, sinl and similar are defined.

 - A new function, (EXT:DUMP-C-BACKTRACE suggested-depth) tries to print out
   the sequence of compiled and C functions called up to the current point.

 - --enable-rpath now defaults to YES.

 - ECL now ships a Windows icon which is added to the executable at build time.

ECL 11.1.2
==========

* Bugs fixed:

 - ENSURE-DIRECTORIES-EXIST did not work properly with logical pathnames.

 - EXT:SET-LIMIT with option EXT:FRAME-STACK corrupted the frame stack.

* Visible changes:

 - When printing error messages, the condition type is shown (M. Mondor)

 - SI:TOP-LEVEL, when invoked without arguments, does not process the
   command line.

 - The command line used by EXT:PROCESS-COMMAND-ARGS is now by default
   the one stored in *COMMAND-ARGS*, and this may be "cleared" by the
   user.


;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***